# Library05267

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FUNCIONALIDADES.md  INSTALL.md  LICENSE  Makefile  PROGRESS_REPORT.md  PROJECT_MANAGEMENT.md  README.md  pyproject.toml  requirements.txt  run.py  run_gui.py  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/development/: environment.rst  style.rst  testing.rst
scripts/: build.py  generate_docs.py  lint.py  optimize_performance.py  run_tests.py
src/nueva_biblioteca/: main.py
src/nueva_biblioteca/core/: audio_analyzer.py  file_scanner.py  meta_designer.py  metadata.py  play_queue.py  player.py  recommender.py
src/nueva_biblioteca/data/: models.py  repository.py
src/nueva_biblioteca/data/migrations/: remove_audio_analysis.py
src/nueva_biblioteca/ui/: main_window.py  theme.py  theme_manager.py
src/nueva_biblioteca/ui/dialogs/: export_dialog.py  metadata_dialog.py  recommendations_dialog.py  smart_playlist_dialog.py
src/nueva_biblioteca/ui/widgets/: base_widget.py  library_table.py  md3_widgets.py  player_controls.py  playlist_panel.py  queue_widget.py  search_bar.py  track_details.py
src/nueva_biblioteca/utils/: batch_processor.py  cache_manager.py  config.py  exporter.py  logger.py  task_queue.py
tests/: conftest.py  test_basic.py  test_config.py  test_models.py  test_simple.py
tests/unit/: test_file_scanner.py  test_metadata.py  test_player.py  test_recommender.py
